# partition-adt

./: LICENSE  partition-adt.cabal  stack.yaml
src/: Partition.hs
test/: Spec.hs
